--- a/package.json
+++ b/package.json
@@ -5,8 +5,21 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@fortawesome/fontawesome-free": "^6.4.0",
+        "@popperjs/core": "^2.11.6",
+        "@vitejs/plugin-vue": "^4.0.0",
+        "autoprefixer": "^10.4.14",
         "axios": "^1.1.2",
+        "bootstrap": "^5.2.3",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^0.7.2",
-        "vite": "^4.0.0"
+        "postcss": "^8.4.24",
+        "sass": "^1.56.1",
+        "tailwindcss": "^3.3.2",
+        "vite": "^4.3.9",
+        "vue": "^3.2.37"
+    },
+    "dependencies": {
+        "@tailwindcss/forms": "^0.5.3"
     }
 }
